--- a/package.json
+++ b/package.json
@@ -1,64 +1,9 @@
 {
-  "name": "deploy-pages",
-  "version": "0.0.0",
-  "description": "Deploy an actions artifact to GitHub Pages",
-  "main": "./dist/index.js",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@actions/http-client": "^2.1.0",
-    "@octokit/request-error": "^5.0.0",
-    "http-status-messages": "^1.1.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-github": "^4.10.1",
-    "jest": "^29.7.0",
-    "nock": "^13.3.8",
-    "prettier": "^3.0.0",
-    "make-coverage-badge": "^1.2.0"
   },
   "scripts": {
-    "all": "npm run format && npm run lint && npm run prepare && npm run test && npm run coverage-badge",
-    "coverage-badge": "make-coverage-badge --output-path ./coverage_badge.svg",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "DEBUG=eslint:cli-engine eslint --fix .",
-    "lint:check": "DEBUG=eslint:cli-engine eslint .",
-    "prepare": "ncc build src/index.js -o dist --source-map --license licenses.txt",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/deploy-pages.git"
-  },
-  "keywords": [
-    "GitHub",
-    "Pages"
-  ],
-  "author": "GitHub",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/actions/deploy-pages/issues"
-  },
-  "homepage": "https://github.com/actions/deploy-pages#readme",
-  "jest": {
-    "coverageReporters": [
-      "json-summary",
-      "text",
-      "lcov"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "./src/**"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "lines": 70,
-        "statements": 70
-      }
-    }
+    "build": "vite build"
   }
 }
