--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ inputs:
   preview:
     description: 'Is this attempting to deploy a pull request as a GitHub Pages preview site? (NOTE: This feature is only in alpha currently and is not available to the public!)'
     required: false
-    default: 'false'
+    default: ${{ github.event_name == 'pull_request' }}
 
 outputs:
   page_url:
