--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "dependencies": {
-  },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@types/node": "^20.9.3",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2"
   },
   "scripts": {
     "build": "vite build"
+  },
+  "dependencies": {
+    "@actions/artifact": "^1.1.2"
   }
 }
