--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "@actions/github": "^6.0.0",
     "@types/node": "^20.9.3",
     "typescript": "^5.3.2",
-    "vite": "^5.0.2"
+    "vite": "^5.0.2",
+    "@actions/artifact": "^1.1.2"
   },
   "scripts": {
     "build": "vite build"
   },
-  "dependencies": {
-    "@actions/artifact": "^1.1.2"
-  }
+  "workspaces": ["controller/download-pages-artifact"]
 }
