--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -20,13 +20,14 @@ concurrency:
   cancel-in-progress: true
 jobs:
   test-action:
+    concurrency: github-pages-write
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: npm
-      - run: npm ci
-      - run: npm run build
+          ref: ${{ github.event.pull_request.head.ref }}
+      - run: mkdir -p _site && echo $RANDOM > index.html
+      - uses: actions/upload-pages-artifact@v2
       - uses: ./
