--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -28,6 +28,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-      - run: mkdir -p _site && echo $RANDOM > index.html
+      - run: mkdir -p _site && echo $RANDOM > _site/index.html
       - uses: actions/upload-pages-artifact@v2
       - uses: ./
